[project]
name = "smpp-anomaly-detector"
version = "0.1.0"
description = "SMPP proxy system for detecting anomalies in SMS traffic"
authors = [
    {name = "paxawok",email = "yurcherevach@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis (>=2.0.1,<3.0.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"

